# openetr

./: .dockerignore  .gitignore  CNAME  README.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  styles.css
.github/workflows/: pages.yml
app/: Dockerfile  README.md  encrypted_session.py  main.py  requirements.txt
app/templates/: _bitcoin_balance_shell.html  _blossom_storage.html  _etr_query_qr.html  _global_scripts.html  _media_preview.html  _profile_create_form.html  _profile_edit_shell.html  _profile_publish_shell.html  _silent_payment_ownership_shell.html  _silent_payment_preview_shell.html  bitcoin_balance.html  bitcoin_balance_fragment.html  control_desk.html  digital_product_passports.html  index.html  issue_etr_confirm.html  login.html  logout_confirm.html  overview.html  profile_edit.html  (+7 more)
docs/: summary-brief.md
docs-site/: apostille-documents.md  architecture.md  article-mapping.md  control-actions.md  getting-started.md  health-records.md  identity-model.md  index.md  installation.md  issuing-receipts.md  mlwr-article-mapping.md  product-passport-requirements.md  product-passports.md  verifier-policy.md
etrix/: cli.py  config.py  defaults.yaml  helpers.py
examples/: ebl4.md  ebl6.md
mktg/: OPENETR_PLURAL_SYSTEMS_AND_JURISDICTIONS.md  OPENETR_PRODUCT_POSITIONING.md
openetr/: bitcoin.py  cli.py  config.py  control.py  defaults.yaml  guards.py  helpers.py  openetr_trivia.yaml  silent_payments.py  trivia.py
scripts/: nsec_to_tr  scan_silent_payment_transaction_standalone  sweep_silent_payment_standalone  validate_silent_payment
(+75 files in other folders)
