[tool.poetry]
name = "openetr"
version = "0.1.0"
description = "openetr - durable control portable records"
authors = ["trbouma <trbouma@gmail.com>"]
license = "MIT License"
readme = "README.md"
include = ["openetr/defaults.yaml", "openetr/mletr_trivia.yaml"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
monstr = "^0.1.9"
pyyaml = "^6.0.2"
mnemonic = "^0.21"
pydantic = "^2.11.7"

[tool.poetry.scripts]
openetr = "openetr.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
